# swagger.json
@@ -1511,6 +1511,50 @@
         ]
       }
     },
+    "/ideas/{id}": {
+      "get": {
+        "operationId": "IdeasController_findOne",
+        "parameters": [
+          {
+            "name": "id",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": ""
+          }
+        },
+        "tags": [
+          "Ideas"
+        ]
+      },
+      "delete": {
+        "operationId": "IdeasController_remove",
+        "parameters": [
+          {
+            "name": "id",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": ""
+          }
+        },
+        "tags": [
+          "Ideas"
+        ]
+      }
+    },
     "/diagnostico": {
       "post": {
         "operationId": "DiagnosticoController_create",
